# web_scrapping

./: main.py  pyproject.toml  weather.csv
