[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "webscrapping"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
pip = "^20.1"
term = "^2.3"
beautifulsoup4 = "^4.9"
request = "^2019.4"
pandas = "^1.0"
[tool.poetry.dev-dependencies]
